--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.5'
+    compile group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.3'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
