--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'groovy'
-apply plugin: 'eclipse'
-apply plugin:'application'
+plugins {
+    id 'groovy'
+    id 'eclipse'
+    id 'application'
+}
 
 version = 0.1
 
 mainClassName = "org.numerals.Console"
 
 defaultTasks 'clean', 'build'
+
 
 jar {
     manifest {
@@ -19,6 +22,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.7'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    implementation group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.7'
+    testImplementation group: 'junit', name: 'junit', version: '4.+'
 }
